# Cleanify

./: .gitignore  .gitmodules  README.md
Examples/Valgrind_test/: CMakeLists.txt  main.cpp  program
Examples/google_test/: CMakeLists.txt
Examples/google_test/tests/: test.cpp
GUI/pc_applicatie_V3/: client.cpp  client.h  clientdialog.cpp  clientdialog.h  clientdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pc_applicatie.pro  recources.qrc  roomba_commands.h
GUI/pc_applicatie_V3/restbed/source/corvusoft/restbed/: common.hpp  context_placeholder.hpp  context_value.hpp  http.hpp  request.hpp  response.hpp  session.hpp  string.hpp  uri.hpp  web_socket.hpp  web_socket_message.hpp
Libs/Dataframes/: CMakeLists.txt  Dataframe.cpp  Dataframe.h
Mobile_app/Cleanify/app/: Cleanify.apk  build.gradle
Mobile_app/Cleanify/app/src/androidTest/java/han/Cleanify/: ExampleInstrumentedTest.java
Mobile_app/Cleanify/app/src/androidTest/java/han/cleanify/: ExampleInstrumentedTest.java
Mobile_app/Cleanify/app/src/main/: AndroidManifest.xml
Mobile_app/Cleanify/app/src/main/cpp/: native-lib.cpp
Mobile_app/Cleanify/app/src/main/java/han/Cleanify/: MainActivity.kt
Mobile_app/Cleanify/app/src/main/java/han/cleanify/: MainActivity.java
Mobile_app/Cleanify/app/src/main/res/layout/: activity_main.xml  content_main.xml
Mobile_app/Cleanify/app/src/main/res/menu/: menu_main.xml
Mobile_app/Cleanify/app/src/main/res/values/: colors.xml  strings.xml
Mobile_app/Cleanify/app/src/test/java/han/Cleanify/: ExampleUnitTest.java
Mobile_app/Cleanify/app/src/test/java/han/cleanify/: ExampleUnitTest.java
Mobile_app/Cleanify/gradle/wrapper/: gradle-wrapper.properties
PCapplication/: clientdialog.cpp  clientdialog.h  clientdialog.ui  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  pc_applicatie  pc_applicatie.pro  pc_applicatie.pro.user.8164d5d  recources.qrc
PCapplication/build-pc_applicatie-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  moc_clientdialog.cpp  moc_mainwindow.cpp  pc_applicatie  qrc_recources.cpp  ui_clientdialog.h  ui_mainwindow.h
PCapplication/test pc app executable/: pc_applicatie
RoombaController/: CMakeLists.txt  Readme.md  globals.cpp  globals.h  main.cpp
RoombaController/Dataframe/: CMakeLists.txt  DataFrames.cpp  DataFrames.h
RoombaController/IO/: serial.cpp  serial.h
RoombaController/Io/: roombaIo.h
RoombaController/Sci/: SerialPort.cpp  SerialPort.h  commands.h  roombasci.h  serialport.cpp  serialport.h
RoombaController/Serial/: serial.cpp  serial.h
RoombaController/Server/: file_handler.h  index.html  responses.cpp  responses.h  server.cpp  server.h
RoombaController/Subsystems/: devices.h
RoombaController/SystemControl/: commands.h  main_process.cpp  main_process.h  processing.h  roomba_contol.h  roomba_control.cpp  roomba_control.h  roomba_process.cpp  roomba_process.h  roomba_statemachine.cpp  roomba_statemachine.h  sensordata.h  statemachine.hpp
RoombaController/Tests/: CMakeLists.txt  test.cpp  test.h
RoombaController/Tests/lib/googletest/googletest/include/gtest/: gtest-message.h
RoombaController/Tests/lib/googletest/googletest/test/: gtest-message_test.cc  gtest_unittest.cc
RoombaController/Tests/tests/: CMakeLists.txt  control_test.cpp  devices.cpp  roombatests.cpp  sci_tests.cpp  serial_tests.cpp
RoombaController/docs/: Doxyfile
RoombaController/io/: SerialPort.cpp  commands.h  roombacontroller.cpp  roombacontroller.h  roombaio.h  roombasci.h
RoombaController/restbed/: CMakeLists.txt
RoombaController/sci/: serialport.cpp
RoombaController/serial/: CMakeLists.txt  DataFrames.h  SerialPort.cpp  SerialPort.h  roombasci.h
RoombaController/src/: glb_events.cpp  glb_events.h  glb_roomba_param.cpp  glb_roomba_param.h  glb_server_context.cpp  glb_server_context.h  glb_session.cpp  glb_session.h  globals.h  main.cpp  responses.cpp  responses.h  roomba_algorithm.cpp  roomba_algorithm.h  roomba_control.cpp  roomba_control.h  roomba_statemachine.cpp  roomba_statemachine.h  sensorparser.cpp  sensorparser.h  sensorparser.hpp  serial.cpp  serial.h  server.cpp  server.h  statemachine.hpp
RoombaController/tests/: CMakeLists.txt
RoombaController/tests/lib/googletest/googlemock/: CMakeLists.txt  CONTRIBUTORS
RoombaController/tests/lib/googletest/googletest/: CMakeLists.txt  CONTRIBUTORS
RoombaController/tests/lib/googletest/googletest/test/: gtest-port_test.cc  gtest-printers_test.cc  gtest_unittest.cc
RoombaController/tests/tests/: CMakeLists.txt  algorithms.cpp  control_test.cpp  sensorparser_test.cpp  serial_tests.cpp
RoombaController/web/: About.html  Autonomous_mode.html  Logging.json  Manual_mode.html  control.html  index.html  index1.html  page2.html  roomba.html
RoombaController/web/scripts/: autonomous.js  connection.js  control.js  main.js  manual.js  maps.js
RoombaController/web/styles/: main.css
RoombaSim/: README.md
RoombaSim/Debug/: Makefile  RoombaSim  moc_room.cpp  moc_roombasim.cpp  ui_roombasim.h
RoombaSim/RoombaSim/: RoombaSim.pro  dataframe.h  helper.h  main.cpp  mainwindow.cpp  mainwindow.h  room.cpp  room.h  roomba.cpp  roomba.h  roombasim.cpp  roombasim.h  roombasim.ui  serial.h  version.h
Tests/: CMakeLists.txt  main.cpp  test-state.puml
Tests/google_test/: CMakeLists.txt  main.cpp
Tests/google_test/tests/: ClassName.h
Tests/tests/: TestFunctions.cpp  TestFunctions.h
UML/: Deployment_Diagram.puml  GUI_Class.puml  Hiërarchisch schema.puml  RoombacontrollerClassSimplified.puml  class_diagram.puml  clean_algorithm.puml  depl2  layered_architecture.puml  spot_algorithm.puml  state_diagram.puml  state_machine.puml  state_machine_algoritm.puml  test-state.puml  use-case.puml
UML/sequence/: gui-server_get.puml  gui-server_post.puml  roombacontroller.puml  website-server_get.puml  website-server_post.puml
vpn/hanese/: ca.crt  client.ovpn
vpn/rfmeekes/: VPNConfig.ovpn  ca.crt  ca_bundle.crt  cmd
